--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
 *{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    padding: 10px, 10px, 10px, 10px;
+    /* box-sizing: border-box; */
     font-family: 'Montserrat', sans-serif;
 }
 
 .container{
     width: 100%;
     min-height: 100vh;
+    padding:10px
 }
 
 h2 {
@@ -22,14 +23,13 @@ h2 {
 .picture-frame {
     display: flex;
     justify-content: center;
-    /* padding: 10px,10px,10px,10px; */
-
 }
 
 img{
-    max-width: 100vh;
+    max-width: 100vw;
     max-height: 100vh;
-    /* padding: 10px,10px,10px,10px; */
+    padding-left: 10px;
+    padding-right: 10px
 }
 
 /* Discount discription */
@@ -48,9 +48,8 @@ p {
 }
 
 /* Share zone */
-.radio-btns {
-    padding: 30px;
-    color: black
+.radio-btns:hover {
+    cursor: pointer;
 }
 
 input[type="radio"] {
@@ -67,53 +66,112 @@ input[type="radio"] {
 }
 
 .share {
+    /* display: flex;
+    justify-content: center; */
     padding: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
 
 /* Form CSS */
 .share-title {
     font-weight: 100;
+    font-size: small;  
 }
 
-#email-text {
+#form-id {
+    padding-top: 20px;
+}
+
+#email-text, #text-text, #recipent-text, #spelling-text, #address-text{
     font-size: xx-small;
 }
 
-#text-text {
-    font-size: xx-small;
-}
 
-
-#recipent {
-    width: 25%;
-    height:fit-content
-}
-
-#recipent-text {
-    font-size: xx-small;
-}
-
-#spelling {
-    width: 25%;
-}
-
-#spelling-text {
-    font-size: xx-small;
-}
-
-#address {
-    width: 25%;
-}
-
-#address-text {
-    font-size: xx-small;
+#recipent, #spelling, #address {
+    width: 65%;
+    height:fit-content;
 }
 
 .submit-btn {
     color: white;
     background-color: #b20714;
+    border: none;
+
     font-size: xx-small;
     width: 60px;
     height: 25px
+}
+
+.submit-btn:hover {
+    cursor:pointer;
+}
+
+/* Link Section */
+.link-title {
+    font-weight: 100;
+    font-size: small;
+    padding-bottom: 20px
+    
+}
+
+.copy-box {
+    background-color:#ebebeb;
+    border-style: solid;
+    border-color:gray;
+    border-width: 1px;
+    width: auto;
+    height: auto;
+    padding: 15px;
+    
+}
+
+#copy-btn {
+    color: white;
+    background-color: #b20714;
+    border: none;
+    font-size: xx-small;
+    width: 60px;
+    height: 20px
+}
+
+#copy-btn:hover {
+    cursor: pointer
+}
+
+.link {
+    font-size: 8px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.links p {
+    margin-top: 10px;
+    color: black;
+    font-size: 8px;
+}
+
+.invite-title {
+    font-weight: 100;
+    font-size: small;
+    padding-top: 15px  
+}
+
+.platforms {
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+}
+
+.platform-icon img{
+    width: 15px;
+}
+
+.platform-icon{
+    font-size: xx-small;
+    color: black;
 }
