--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ h2 {
 h2:before {
     content: "";
     display: block;
-    width: 250px;
+    width: 400px;
     height: 2px;
     background: #c4c4c4;
     left: 1px;
@@ -29,7 +29,7 @@ h2:before {
 h2:after {
     content: "";
     display: block;
-    width: 250px;
+    width: 400px;
     height: 2px;
     background: #c4c4c4;
     right: 1px;
@@ -55,7 +55,7 @@ img{
 }
 
 p {
-    font-size: x-small;
+    font-size: small;
 }
 
 /* Share zone */
@@ -89,8 +89,8 @@ input[type="radio"] {
 
 /* Form CSS */
 .share-title {
-    font-weight: 100;
-    font-size: small;  
+    font-weight: 50;
+    font-size: 15px;  
 }
 
 #form-id {
@@ -123,8 +123,8 @@ input[type="radio"] {
 
 /* Link Section */
 .link-title {
-    font-weight: 100;
-    font-size: small;
+    font-weight: 50;
+    font-size: 15px;
     padding-bottom: 20px
     
 }
@@ -137,8 +137,10 @@ input[type="radio"] {
     width: auto;
     height: 45px;
     padding: 10px;
+}
 
-    
+#copy {
+    font-size: 12px;
 }
 
 #copy-btn {
@@ -148,8 +150,6 @@ input[type="radio"] {
     font-size: xx-small;
     width: 60px;
     height: 30px;
-    /* margin-top: -25px;
-    margin-left: 300px */
 }
 
 #copy-btn:hover {
@@ -157,7 +157,7 @@ input[type="radio"] {
 }
 
 .link {
-    font-size: 8px;
+    font-size: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
@@ -170,9 +170,9 @@ input[type="radio"] {
 }
 
 .invite-title {
-    font-weight: 100;
-    font-size: small;
-    padding-top: 15px  
+    font-weight: 50;
+    font-size: 15px;
+    padding-top: 15px;
 }
 
 .platforms {
@@ -183,10 +183,16 @@ input[type="radio"] {
 }
 
 .platform-icon img{
-    width: 15px;
+    width: 25px;
+    color:#b20714
 }
 
 .platform-icon{
-    font-size: xx-small;
+    font-size: x-small;
     color: black;
+}
+
+.platform-text {
+    font-size: x-small;
+
 }
